# sai-2018

./: .gitignore
doc/: more_arinc_stuff.txt
doc/project_report/: main.tex
doc/report2/: main.bib  main.tex  preamble.tex
lab2/: P1.m  P1_delivery.m  get_pressure_altitude.m  teste_ADC_altimetro.m
lab2/fault_detectors/: no_signal.slx  parity_error.slx  rate_out_of_bounds.slx  value_out_of_bounds.slx
lab2/myattempt/: main  main.c  makefile
presentation/: README.md
presentation/presentation/: graphics.bib  main.bib  main.tex  preamble-beamer.tex
presentation/report/: ist-report.cls  main.bib  main.tex
project/: CMakeLists.txt  README.md  comms.c  comms.h  draw_functions.c  draw_functions.h  font.c  font.h  global_variables.h  main  main.c  makefile  stub.py
